# loto

./: lotto_buy.py  lotto_gen.py  pyproject.toml
.github/workflows/: buy.yaml
