[tool.poetry]
name = "loto"
version = "0.1.0"
description = ""
authors = ["jangsc0000 <jangsc0000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chromedriver-autoinstaller = "*"
selenium = "^4.3.0"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
